assert-struct/tests/snapshots/multiple_failures__single_failure_unchanged.snap
---
source: assert-struct/tests/multiple_failures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/multiple_failures_errors/single_failure_unchanged.rs:23:14
   |
23 |         age: > 30,  // This will fail
   |              ^^^^ got 25
